# FastAPI-Beginner-projects

todo_project/: main.py  pyproject.toml  schemas.py
